# JuiceBox

./: .env.example  .gitignore  README.MD  __main__.py  main.py  pyproject.toml  test.py
Engine/components/: juiceBoxEngineServer.py  juiceShopManager.py  monitor.py  redisManager.py
Engine/configs/: juiceShopRTBConfig.yml  missions.xml  redis-docker-compose.yml  rootTheBox.json
Install/: install_juicebox.fish  install_juicebox.sh  install_juicebox_arch.fish  install_juicebox_ubuntu_debian.sh  juicebox_arch.fish  juicebox_ubuntu_debian.sh  juicebox_webclient_arch.fish  juicebox_webclient_ubuntu_debian.sh  tui.sh
JuiceBox/: .env.example  __main__.py
JuiceBox.egg-info/: PKG-INFO
JuiceBox/Engine/: api.py  main.py
JuiceBox/Models/: __init__.py
JuiceBox/TUI/: __main__.py  main.py
JuiceBoxEngine/: README.MD  __init__.py  api.py  client.py  juiceboxengine.service  main.py
JuiceBoxEngine/components/: __init__.py  juiceBoxEngineServer.py  juiceShopManager.py  monitor.py  redisManager.py  rootTheBoxManager.py
JuiceBoxEngine/configs/: README.MD
JuiceBoxEngine/models/: schemas.py
JuiceBoxEngine/scripts/: juiceBoxEngineServer.py  juiceShopManager.py  killAllContainers.py  (+3 more)
JuiceBox_TUI/: README.MD  juicebox_tui.sh  main.py  serverInfo.py
Monitor/: monitor.py
TUI/: main.py  serverInfo.py  tui.sh
Uninstall/: uninstall_juicebox.fish  uninstall_juicebox.sh  uninstall_juicebox_arch.fish  uninstall_juicebox_ubuntu_debian.sh  uninstall_juicebox_webclient_arch.fish  uninstall_juicebox_webclient_ubuntu_debian.sh
WebClient/: .env.example  __main__.py  main.py
(+100 files in other folders)
